@@ -37,9 +37,9 @@ if ![istarget "sh-*-*"] then {
 }
 
 set testfile "gdb1291"
-set srcfile ${testfile}.c
+set srcfile ${testfile}.s
 set binfile ${objdir}/${subdir}/${testfile}
-if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable ""] != "" } {
     gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
 }
 
@@ -56,7 +56,37 @@ if ![runto_main] then {
     gdb_suppress_tests
 }
 
-gdb_test "b sub" "Breakpoint 2*" "set breakpoint"
-gdb_test "c" "Breakpoint 2*" "get to sub"
-gdb_test "bt" "#0\[ \t\]*$hex \\(\\) at sh-bt.*\r\n#1\[ \t\]*$hex in main.*" \
-	"backtrace in gdb1291"
+gdb_test "b sub1" "Breakpoint 2.*" "set breakpoint"
+gdb_test "c" "Breakpoint 2.* sub1 .*" "get to sub1"
+
+send_gdb "bt\n"
+gdb_expect {
+    -re "#0.* sub1 .*\r\n#1\[ \t\]*$hex in main \\(\\).*\r\n$gdb_prompt $" {
+	pass "backtrace with local variable less than or equal to 256 bytes"
+    }
+    -re ".*$gdb_prompt $" {
+	fail "backtrace with local variable less than or equal to 256 bytes"
+    }
+    timeout {
+	fail "backtrace with local variable less than or equal to 256 bytes (timeout)"
+    }
+}
+
+gdb_test "b sub2" "Breakpoint 3.*" "set breakpoint"
+gdb_test "c" "Breakpoint 3.* sub2 .*" "get to sub2"
+
+send_gdb "bt\n"
+gdb_expect {
+    -re "#0.* sub2 .*\r\n#1\[ \t\]*$hex in main \\(\\).*\r\n$gdb_prompt $" {
+	pass "backtrace with local variable larger than 256 bytes"
+    }
+    -re "#0.* sub2 .*\r\n#1  0x00000000 in \\?\\? \\(\\).*\r\n$gdb_prompt $" {
+	kfail "gdb/1291" "backtrace with local variable larger than 256 bytes"
+    }
+    -re ".*$gdb_prompt $" {
+	fail "backtrace with local variable larger than 256 bytes"
+    }
+    timeout {
+	fail "backtrace with local variable larger than 256 bytes (timeout)"
+    }
+}
